# hl-maker-lighter-arb-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.build  README.md  SPECULATIVE_HEDGE_IMPLEMENTATION.md
docs/: baseline-2026-03-27.md  dual-maker-execution-design.md  performance-baseline.md  real-pnl-data-requirements.md
include/arb/: bridge_exchange.hpp  crypto.hpp  engine.hpp  exchange.hpp  hl_ws_post.hpp  http.hpp  journal.hpp  lighter_ws_sendtx.hpp  market_feed.hpp  msgpack.hpp  native_trading.hpp  perf.hpp  process.hpp  public_exchange.hpp  risk.hpp  strategy.hpp  types.hpp  ws_client.hpp  ws_exchange.hpp
live/: README.md  config.txt  status.txt  trades.csv
scripts/: bridge-requirements.txt  deploy.sh  exchange_bridge.py  grid_detail.py  grid_search.py  grid_search_v2.py  naked_monitor.py  perf_baseline.py  sync_live_data.sh
src/: bridge_exchange.cpp  crypto.cpp  engine.cpp  hl_ws_post.cpp  http.cpp  lighter_ws_sendtx.cpp  main.cpp  main_live.cpp  market_feed.cpp  msgpack.cpp  native_baseline.cpp  native_smoke.cpp  native_trading.cpp  perf.cpp  process.cpp  public_exchange.cpp  risk.cpp  sign_test.cpp  strategy.cpp  ws_client.cpp  ws_smoke.cpp
tests/: test_risk.cpp  test_speculative_hedge.cpp  test_strategy.cpp
